// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test create setlist form Should show the setlistname input and the libraray checkbox when ismajorLibrary is false 1`] = `
<DocumentFragment>
  <form
    class=""
    method="GET"
  >
    <div
      class="form-group col-md-6"
    >
      <label
        class="form-label"
        for="CreateSetlist_SetlistName"
      >
        Setlist Name
      </label>
      <input
        class="form-control"
        id="CreateSetlist_SetlistName"
        placeholder="Enter Setlist Name"
        type="text"
      />
    </div>
    <div
      class="form-group col-md-6"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="CreateSetlist_IsLibrary"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="CreateSetlist_IsLibrary"
          title=""
        >
          Library
        </label>
      </div>
    </div>
    <button
      class="btn btn-primary"
      type="submit"
    >
      Create Setlist
    </button>
  </form>
</DocumentFragment>
`;

exports[`Test create setlist form Should show the setlistname input when ismajorLibrary is true 1`] = `
<DocumentFragment>
  <form
    class=""
    method="GET"
  >
    <div
      class="form-group col-md-6"
    >
      <label
        class="form-label"
        for="CreateSetlist_MajorLibraryName"
      >
        Major Library Name
      </label>
      <input
        class="form-control"
        id="CreateSetlist_MajorLibraryName"
        placeholder="Enter Major Library Name"
        type="text"
      />
    </div>
    <button
      class="btn btn-primary"
      type="submit"
    >
      Create Major Library
    </button>
  </form>
</DocumentFragment>
`;
